Fixes. table header is re-aligned; restored the width of the flag cells. flag.header now shades like a header cell, not a flag cell

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -1,6 +1,3 @@
-/*
-This css file is a placeholder. Use this or roll your own, choice is yours.
-*/
 .wrapper {
 	display: grid;
 	grid-template-rows: 150px auto;
@@ -56,9 +53,11 @@ input[type=text] {
 .cell.flag {
 	min-width: 40px;
 	max-width: 100px;
-	width: auto;
-	background-color: #e8e8e8;
+	width: 100px;
 	flex-shrink: 8;
+}
+.cell.flag>.row:not(.header) {
+	background-color: #e8e8e8;
 }
 img {
 	display: block; 
